[package]
name = "weighted_rand"
version = "0.4.2"
authors = ["Ichi <ichi.h3@gmail.com>"]
description = "A weighted random sampling crate using Walker's Alias Method."
documentation = "https://docs.rs/weighted_rand"
homepage = "https://github.com/ichi-h/weighted_rand"
repository = "https://github.com/ichi-h/weighted_rand"
keywords = ["random", "weighted", "walker", "alias", "method"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
